--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,21 @@ br {
     display: none;
 }
 
+
+html {
+
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
 .page {
 
     width: 100%;
