--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,4 +1,21 @@
 .header__lang-links {
     display: flex;
-    justify-content: flex-end;
+    gap: 18px;
+    padding: 0;
+    margin: 46px 48px 0 0;
+}
+
+@media screen and (max-width:768px) {
+    .header__lang-links {
+        margin-right: 24px;
+
+    }
+}
+
+@media screen and (max-width:320px) {
+    .header__lang-links {
+        margin-top: 30px;
+        margin-right: 16px;
+
+    }
 }
