--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,42 +1,38 @@
 .cover__subtitle {
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    color: #FFFFFF;
     text-align: center;
-    z-index: 2;
-    padding: 0;
-    margin: auto;
-    position: absolute;
-    top: 60vh;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    white-space: pre-line;
+    text-align: center;
+    box-sizing: border-box;
+    margin-bottom: 245px;
+    margin-left: 412px;
+    margin-right: 412px;
 }
 
-@media screen and (min-width:769px) and (max-width:1024px) {
+@media screen and (max-width:1024px) {
     .cover__subtitle {
-        font-size: 14px;
-        line-height: 16px;
-        top: 150px;
+        margin-left: 332px;
+        margin-right: 332px;
+        margin-bottom: 195px;
     }
 }
 
-
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:768px) {
     .cover__subtitle {
-        font-size: 14px;
-        line-height: 16px;
-        top: 185px;
+        margin-left: 204px;
+        margin-right: 204px;
+        margin-bottom: 115px;
     }
 }
 
-@media screen and (max-width:424px) {
+@media screen and (max-width:320px) {
     .cover__subtitle {
+        margin-left: 16px;
+        margin-right: 16px;
+        margin-bottom: 33px;
         font-size: 14px;
         line-height: 16px;
-        top: 15vh;
     }
 }
