--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,4 +1,20 @@
 .footer__author {
     margin: 0;
     padding: 0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: right;
+
+}
+
+@media screen and (max-width:320px) {
+    .footer__author {
+        line-height: 14px;
+        margin-top: 48px;
+        margin-right: 18px;
+        text-align: start;
+    }
 }
