--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,25 +1,34 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    margin: 10% 5%;
-    width: 90%;
+    margin: 92px 48px 24px;
     color: #FFFFFF;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
+    padding: 0;
+    box-sizing: border-box;
+
 }
 
-@media screen and (min-width:425px) and (max-width:767px) {
+@media screen and (max-width:768px) {
     .footer {
-        font-size: 10px;
-        line-height: 12px;
+        margin-top: 88px;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
 
-@media screen and (max-width:424px) {
+@media screen and (max-width:320px) {
     .footer {
         flex-direction: column;
+        margin-top: 64px;
+        margin-left: 16px;
+        margin-right: 16px;
+        font-size: 24px;
+        line-height: 24px;
+
     }
 }
