--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,6 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 30px 40px;
-}
-
-@media screen and (max-width: 424px) {
-    .header {
-        padding: 20px;
-    }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-    .header {
-        padding-left: 25px;
-        padding-right: 25px;
-    }
+    padding: 0;
+    margin: 0;
 }
