--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,28 +5,32 @@
     font-size: 16px;
     line-height: 163%;
     color: #FFFFFF;
-    width: 80%;
-    margin: 15px 0 0 10%;
-    padding: 0 auto;
+    margin: 0 442px 0 148px;
     text-align: start;
 
 }
 
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .intro__text {
-        width: 90%;
-        margin: 15px 0 0 5%;
-        font-size: 15px;
-        line-height: 163%;
+        margin-left: 48px;
+        margin-right: 286px;
+    }
+}
+
+
+
+
+@media screen and (max-width:768px) {
+    .intro__text {
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
 
 
 @media screen and (max-width:424px) {
     .intro__text {
-        width: 90%;
-        margin: 15px 0 0 5%;
-        font-size: 11px;
-        line-height: 163%;
+        margin-left: 16px;
+        margin-right: 16px;
     }
 }
