--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,27 +5,30 @@
     font-size: 54px;
     line-height: 58px;
     color: #FFFFFF;
-    width: 65%;
-    margin: 55px 0 0 10%;
-    padding: 0 auto;
+    margin: 40px auto 40px 148px;
     text-align: start;
 }
 
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .intro__title {
-        font-size: 37px;
-        line-height: 42px;
-        width: 90%;
-        margin: 55px 0 0 5%;
+        margin-left: 48px;
+    }
+}
+
+
+@media screen and (max-width:768px) {
+    .intro__title {
+        margin-left: 24px;
+        margin-top: 88px;
     }
 }
 
 
 @media screen and (max-width:424px) {
     .intro__title {
+        margin-left: 16px;
+        margin-top: 86px;
         font-size: 32px;
         line-height: 35px;
-        width: 90%;
-        margin: 55px 0 0 5%;
     }
 }
