--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,26 +7,24 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
     color: #FFFFFF;
-    padding-top: 1px;
-    display: flex;
-    align-self: start;
-    text-align: start;
-    margin: 0 0 0 10%;
+    margin: 0 0 0 148px;
 }
 
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .lead__caption {
-        margin: 0 0 0 5%;
-        font-size: 8px;
-        line-height: 12px;
+        margin-left: 48px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .lead__caption {
+        margin-left: 24px;
     }
 }
 
 
 @media screen and (max-width:424px) {
     .lead__caption {
-        margin: 0 0 0 5%;
-        font-size: 7px;
-        line-height: 11px;
+        margin-left: 16px;
     }
 }
