--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,17 +1,32 @@
 .lead__image {
-    padding: 0 10% 0;
-    width: 80%;
+    margin: 64px 148px 8px;
+    max-width: 984px;
+
 }
 
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .lead__image {
-        width: 96%;
+        margin-top: 56px;
+        margin-right: 48px;
+        margin-left: 48px;
+        max-width: 928px;
     }
 }
 
 
-@media screen and (max-width:424px) {
+@media screen and (max-width:768px) {
     .lead__image {
-        width: 96%;
+        width: 100%;
+        max-width: 768px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+
+@media screen and (max-width:320px) {
+    .lead__image {
+        max-width: 320px;
+        margin-top: 40px;
     }
 }
