--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,48 +2,47 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
-    font-size: 10vh;
-    line-height: 10vh;
+    font-size: 96px;
+    line-height: 100px;
     color: #FFFFFF;
-    width: 30%;
-    margin: 25px 0 15px;
-    padding: 0 auto;
+    max-width: 720px;
+    margin: 56px 280px 32px;
+    padding: 0;
     text-align: center;
+    box-sizing: border-box;
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+
+@media screen and (max-width:1024px) {
     .lead__title {
-        width: 40%;
+        margin-top: 48px;
+        margin-left: 152px;
+        margin-right: 152px;
     }
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (max-width:768px) {
     .lead__title {
-        width: 75%;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
 
-@media screen and (min-width:769px) and (max-width:1023px) {
-    .lead__title {
-        width: 80%;
-        font-size: 75px;
-        line-height: 74px;
-    }
-}
-
-@media screen and (min-width:425px) and (max-width:768px) {
-    .lead__title {
-        width: 85%;
-        font-size: 65px;
-        line-height: 61px;
-    }
-}
-
-
-@media screen and (max-width:424px) {
+@media screen and (max-width:680px) {
     .lead__title {
         font-size: 40px;
         line-height: 44px;
-        width: 90%;
+        max-width: 288px;
+        margin: 48px auto 16px;
+    }
+}
+
+@media screen and (max-width:280px) {
+    .lead__title {
+        font-size: 20px;
+        line-height: 30px;
+        max-width: 100px;
+        margin: 38px auto 16px;
+        padding: 0;
     }
 }
