--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    margin: 0;
+    padding: 0;
 }
