--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,27 +1,8 @@
-br {
-    display: none;
-}
-
-
-html {
-
-    width: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-body {
-    width: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-
 .page {
-
     width: 100%;
     margin: 0 auto;
-    font-family: 'inter';
-    background-color: #2A2C2F;
+    font-family: 'inter', 'Helvetica Neue', Arial, sans-serif;
+    max-width: 1280px;
+    padding: 0;
 
 }
