--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,29 +1,44 @@
 .photo-grid__item {
     object-fit: cover;
     object-position: 0px 0px;
-    width: 23vw;
+    max-width: 284px;
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (max-width:1024px) {
     .photo-grid__item {
-        width: 26vw;
+        max-width: 300px;
     }
 }
 
-@media screen and (min-width:769px) and (max-width:1023px) {
+@media screen and (max-width:900px) {
     .photo-grid__item {
-        width: 27vw;
+        max-width: 28vw;
     }
 }
 
-@media screen and (min-width:425px) and (max-width:768px) {
+
+
+@media screen and (max-width:768px) {
     .photo-grid__item {
-        width: 44vw;
+        max-width: 352px;
     }
 }
 
-@media screen and (max-width:424px) {
+@media screen and (max-width:680px) {
     .photo-grid__item {
-        width: 100%;
+        max-width: 45vw
+    }
+}
+
+
+@media screen and (max-width:320px) {
+    .photo-grid__item {
+        max-width: 288px;
+    }
+}
+
+@media screen and (max-width:280px) {
+    .photo-grid__item {
+        max-width: 90%;
     }
 }
