--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,46 +1,36 @@
 .photo-grid {
     display: grid;
-    gap: 1vh;
+    gap: 16px;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(4, 1fr);
-    width: 94%;
-    margin: 55px 3% 0;
+    margin: 0 48px 0;
     padding: 0;
     justify-content: center;
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (max-width:1024px) {
     .photo-grid {
         grid-template-rows: repeat(4, 1fr);
         grid-template-columns: repeat(3, 1fr);
-        width: 80%;
-        margin: 55px 10% 0;
+        gap: 14px;
     }
 }
 
-@media screen and (min-width:769px) and (max-width:1023px) {
-    .photo-grid {
-        grid-template-rows: repeat(4, 1fr);
-        grid-template-columns: repeat(3, 1fr);
-        width: 80%;
-        margin: 55px 10% 0;
-    }
-}
-
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:768px) {
     .photo-grid {
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(2, 1fr);
-        width: 86%;
-        margin: 55px 7% 0;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
 
-@media screen and (max-width:424px) {
+@media screen and (max-width:320px) {
     .photo-grid {
         grid-template-rows: repeat(12, 1fr);
         grid-template-columns: repeat(1, 1fr);
-        width: 90%;
-        margin: 55px 5% 0;
+        gap: 12px;
+        margin-left: 16px;
+        margin-right: 16px;
     }
 }
