--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,22 +1,26 @@
-.place__image {
-    width: 100%;
-    object-fit: cover;
-    object-position: 0px 0px;
-}
-
-
-@media screen and (min-width:425px) {
     .place__image {
         grid-area: place__image;
+        max-width: 460px;
         margin: 0;
-        padding: 0;
     }
-}
 
 
-@media screen and (max-width:424px) {
-    .place__image {
-        margin-top: 20px;
-        margin-bottom: 25px;
+    @media screen and (max-width:1024px) {
+        .place__image {
+            max-width: 440px;
+        }
     }
-}
+
+    @media screen and (max-width:768px) {
+        .place__image {
+            max-width: 340px;
+        }
+    }
+
+    @media screen and (max-width:320px) {
+        .place__image {
+            width: 100%;
+            margin-top: 32px;
+            margin-bottom: 32px;
+        }
+    }
