--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,22 +2,10 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 2px;
+    font-size: 18px;
+    line-height: 22px;
+    text-decoration-line: underline;
     color: #FFFFFF;
-
-}
-
-@media screen and (min-width:425px) and (max-width:768px) {
-    .place__url-heading {
-        font-size: 9px;
-        line-height: 9px;
-    }
-}
-
-@media screen and (max-width:424px) {
-    .place__link {
-        margin: 0 5% 5%;
-    }
+    margin: 0;
+    padding: 0;
 }
