--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,36 +4,24 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-
+    margin: 0;
+    grid-area: place__title;
 }
 
-@media screen and (min-width:769px) {
-    .place__title {
-        grid-area: place__title;
-        margin: 0;
-        padding: 5% 0 0;
-        max-height: 152px;
-
-    }
-}
-
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:768px) {
     .place__title {
         font-size: 42px;
-        line-height: 42px;
-        grid-area: place__title;
-        margin: 0;
-        padding: 5% 0 0;
-        max-height: 152px;
-        width: 90%;
+        line-height: 46px;
+
     }
 }
 
-@media screen and (max-width:424px) {
+@media screen and (max-width:320px) {
     .place__title {
-        width: 90%;
+        margin-bottom: 32px;
+        margin-left: 16px;
+        margin-right: 16px;
         font-size: 32px;
         line-height: 35px;
-        margin: 7% 5% 7%;
     }
 }
