--- a/blocks/place/__url-header/place__url-header.css
+++ b/blocks/place/__url-header/place__url-header.css
@@ -3,21 +3,15 @@
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 170%;
     letter-spacing: 2px;
-
+    color: #AAAAAA;
+    margin: 0 0 12px;
+    padding: 0;
 }
 
-@media screen and (min-width:425px) and (max-width:768px) {
+@media screen and (max-width:768px) {
     .place__url-heading {
-        font-size: 9px;
-        line-height: 9px;
-    }
-}
-
-
-@media screen and (max-width:424px) {
-    .place__url-heading {
-        margin: 0 5% 4%;
+        line-height: 12px;
     }
 }
