--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,9 +1,16 @@
-@media screen and (min-width:425px) {
     .place__website {
         grid-area: place__website;
-        margin: 0 0 0 8%;
-        padding-top: 4%;
-        gap: 5%;
-        max-height: 152px;
+        margin: 0;
+        padding: 0;
+        gap: 12px;
+
     }
-}
+
+
+    @media screen and (max-width:320px) {
+        .place__website {
+            margin-left: 16px;
+            margin-right: 16px;
+
+        }
+    }
