--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,15 +2,16 @@
         grid-area: place__website;
         margin: 0;
         padding: 0;
-        gap: 12px;
-
+        align-self: flex-end;
     }
+
 
 
     @media screen and (max-width:320px) {
         .place__website {
             margin-left: 16px;
             margin-right: 16px;
+            align-self: flex-start;
 
         }
     }
