--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -24,6 +24,12 @@
     }
 }
 
+@media screen and (max-width:540px) {
+    .place {
+        grid-column-gap: 2px;
+    }
+}
+
 
 @media screen and (max-width:320px) {
     .place {
