--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -21,12 +21,18 @@
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:600px) {
     .footer {
         flex-direction: column;
         margin-top: 64px;
         margin-left: 16px;
         margin-right: 16px;
+    }
+}
+
+
+@media screen and (max-width:320px) {
+    .footer {
         font-size: 24px;
         line-height: 24px;
 
