--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,7 +6,7 @@
     line-height: 36px;
     color: #FFFFFF;
     max-width: 640px;
-    margin: 0 320px;
+    margin: 0 auto;
     padding: 0;
     text-align: center;
     box-sizing: border-box;
@@ -14,25 +14,9 @@
 }
 
 
-@media screen (max-width:1024px) {
-    .lead__subtitle {
-        margin-left: 192px;
-        margin-right: 192px;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .lead__subtitle {
-        margin-left: 64px;
-        margin-right: 64px;
-    }
-}
-
 
 @media screen and (max-width:424px) {
     .lead__subtitle {
-        margin-left: 16px;
-        margin-right: 16px;
         max-width: 288px;
         font-size: 16px;
         line-height: 20px;
