--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,7 +6,7 @@
     line-height: 100px;
     color: #FFFFFF;
     max-width: 720px;
-    margin: 56px 280px 32px;
+    margin: 56px auto 32px;
     padding: 0;
     text-align: center;
     box-sizing: border-box;
@@ -16,24 +16,24 @@
 @media screen and (max-width:1024px) {
     .lead__title {
         margin-top: 48px;
-        margin-left: 152px;
-        margin-right: 152px;
+
     }
 }
 
-@media screen and (max-width:768px) {
-    .lead__title {
-        margin-left: 24px;
-        margin-right: 24px;
-    }
-}
 
 @media screen and (max-width:680px) {
     .lead__title {
         font-size: 40px;
         line-height: 44px;
         max-width: 288px;
-        margin: 48px auto 16px;
+
+    }
+}
+
+
+@media screen and (max-width:320px) {
+    .lead__title {
+        margin-bottom: 16px;
     }
 }
 
@@ -42,7 +42,5 @@
         font-size: 20px;
         line-height: 30px;
         max-width: 100px;
-        margin: 38px auto 16px;
-        padding: 0;
     }
 }
