--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,7 +2,16 @@
     object-fit: cover;
     object-position: 0px 0px;
     max-width: 284px;
+
 }
+
+@media screen and (max-width:1240px) {
+    .photo-grid__item {
+        max-width: 240px;
+    }
+}
+
+
 
 @media screen and (max-width:1024px) {
     .photo-grid__item {
@@ -10,12 +19,12 @@
     }
 }
 
-@media screen and (max-width:900px) {
+
+@media screen and (max-width:950px) {
     .photo-grid__item {
         max-width: 28vw;
     }
 }
-
 
 
 @media screen and (max-width:768px) {
@@ -24,7 +33,7 @@
     }
 }
 
-@media screen and (max-width:680px) {
+@media screen and (max-width:750px) {
     .photo-grid__item {
         max-width: 45vw;
     }
