--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -11,16 +11,38 @@
         }
     }
 
-    @media screen and (max-width:768px) {
+    @media screen and (max-width:800px) {
         .place__image {
             max-width: 340px;
         }
     }
+
+    @media screen and (max-width:660px) {
+        .place__image {
+            max-width: 260px;
+        }
+    }
+
+
+    @media screen and (max-width:540px) {
+        .place__image {
+            max-width: 160px;
+        }
+    }
+
+    @media screen and (max-width:420px) {
+        .place__image {
+            max-width: 65px;
+        }
+    }
+
+
 
     @media screen and (max-width:320px) {
         .place__image {
             width: 100%;
             margin-top: 32px;
             margin-bottom: 32px;
+            max-width: 320px;
         }
     }
