--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,7 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__author/footer__author.css);
+
+* {
+    border: 1px solid red;
+}
