--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,7 +4,7 @@
     z-index: 2;
     background-image: url(../../../images/cover-trains.jpg);
     min-height: 720px;
-    background-size: 100% 100%;
+    background-size: cover;
     text-decoration: none;
     cursor: pointer;
     color: #FFFFFF;
