--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,7 +10,7 @@
     line-height: 18px;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
 }
 
 @media screen and (max-width:768px) {
