--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,11 +1,11 @@
 .intro__list {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 18px;
     color: #FFFFFF;
-    margin: 33px 442px 92px 148px;
+    margin: 33px 0 92px 148px;
     text-align: start;
     list-style-type: none;
     padding: 0;
@@ -14,7 +14,7 @@
 @media screen and (max-width:1024px) {
     .intro__list {
         margin-left: 48px;
-        margin-right: 286px;
+
     }
 }
 
