--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,19 +1,20 @@
 .intro__text {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 163%;
     color: #FFFFFF;
-    margin: 0 442px 0 148px;
+    margin: 0 0 0 148px;
     text-align: start;
+    max-width: 690px;
 
 }
 
 @media screen and (max-width:1024px) {
     .intro__text {
         margin-left: 48px;
-        margin-right: 286px;
+
     }
 }
 
