--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,11 +1,11 @@
 .intro__title {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
     color: #FFFFFF;
-    margin: 40px auto 40px 148px;
+    margin: 0 auto 40px 148px;
     text-align: start;
 }
 
@@ -19,7 +19,7 @@
 @media screen and (max-width:768px) {
     .intro__title {
         margin-left: 24px;
-        margin-top: 88px;
+
     }
 }
 
@@ -27,8 +27,8 @@
 @media screen and (max-width:424px) {
     .intro__title {
         margin-left: 16px;
-        margin-top: 86px;
         font-size: 32px;
         line-height: 35px;
+        max-width: 288px;
     }
 }
