--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
@@ -8,6 +8,7 @@
     text-transform: uppercase;
     color: #FFFFFF;
     margin: 0 0 0 148px;
+
 }
 
 @media screen and (max-width:1024px) {
