--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
@@ -34,13 +34,5 @@
 @media screen and (max-width:320px) {
     .lead__title {
         margin-bottom: 16px;
-    }
-}
-
-@media screen and (max-width:280px) {
-    .lead__title {
-        font-size: 20px;
-        line-height: 30px;
-        max-width: 100px;
     }
 }
