--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
     width: 100%;
     margin: 0 auto;
-    font-family: 'inter', 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     max-width: 1280px;
     padding: 0;
 
