--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,5 @@
 .place__link {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -8,4 +8,21 @@
     color: #FFFFFF;
     margin: 0;
     padding: 0;
+}
+
+.place__link:hover {
+
+    transition: 0.35s;
+
+    opacity: 80%;
+
+}
+
+
+@media screen and (min-width:321px) and (max-width:540px) {
+    .place__link {
+        font-size: 10px;
+        line-height: 20px;
+
+    }
 }
