--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,9 +1,9 @@
 .places {
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(1, 1fr);
-    margin: 92px 148px 0;
+    display: flex;
+    flex-direction: column;
+    margin: 92px 148px;
     gap: 80px;
+    padding: 0;
 }
 
 @media screen and (max-width:1024px) {
@@ -20,7 +20,8 @@
         margin-right: 24px;
         margin-top: 88px;
         margin-bottom: 90px;
-        gap: 73px;
+        gap: 72px;
+
     }
 }
 
