--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,37 +1,4 @@
 .photo-grid {
-    display: grid;
-    gap: 16px;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    margin: 0 48px 0;
+    margin: 0;
     padding: 0;
-    justify-content: center;
-
-}
-
-@media screen and (max-width:1030px) {
-    .photo-grid {
-        grid-template-rows: repeat(4, 1fr);
-        grid-template-columns: repeat(3, 1fr);
-        gap: 14px;
-    }
-}
-
-@media screen and (max-width:950px) {
-    .photo-grid {
-        grid-template-rows: repeat(6, 1fr);
-        grid-template-columns: repeat(2, 1fr);
-        margin-left: 24px;
-        margin-right: 24px;
-    }
-}
-
-@media screen and (max-width:320px) {
-    .photo-grid {
-        grid-template-rows: repeat(12, 1fr);
-        grid-template-columns: repeat(1, 1fr);
-        gap: 12px;
-        margin-left: 16px;
-        margin-right: 16px;
-    }
 }
