--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,7 +5,7 @@
     text-align: center;
     box-sizing: border-box;
     font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
-    margin-top: 0;
+    margin: 0 auto;
     align-self: center;
     max-width: 360px;
 }
