--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,32 +2,15 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    margin: 0 312px 32px;
+    margin: 0 auto 32px;
     text-align: center;
     box-sizing: border-box;
     font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     max-width: 560px;
 }
 
-@media screen and (max-width:1024px) {
-    .cover__title {
-        margin-left: 232px;
-        margin-right: 232px;
-    }
-}
-
-@media screen and (max-width:860px) {
-    .cover__title {
-        margin-left: 104px;
-        margin-right: 104px;
-
-    }
-}
-
 @media screen and (max-width:520px) {
     .cover__title {
-        margin-left: 16px;
-        margin-right: 16px;
         font-size: 32px;
         line-height: 35px;
     }
@@ -36,7 +19,7 @@
 
 @media screen and (max-width:320px) {
     .cover__title {
-        max-width: 288px;
+        max-width: 255px;
         margin-bottom: 16px;
     }
 }
